--- a/web/package.json
+++ b/web/package.json
@@ -14,11 +14,14 @@
     "react-scripts": "3.1.2",
     "typescript": "3.6.3"
   },
+  "main": "../electron-dist/electron-starter.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "tsc --outDir ../electron-dist src/electron-starter && electron .",
+    "start:app": "yarn run concurrently \"yarn run start\" \"yarn run electron\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,6 +39,8 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^4.1.2",
+    "electron": "^6.0.10",
     "react-concise-state": "^1.2.0"
   }
 }
